# AppLauncher

./: .env.sample  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  captain-definition  docker.sh  go.sh  launcher-proxy-nginx.conf  manage.py  pyproject.toml
django/: pyproject.toml
django/launcher_app/: apps.py  asgi.py  auth.py  galaxy.py  models.py  settings.py  urls.py  views.py  wsgi.py
django/launcher_app/migrations/: 0001_initial.py
dockerfiles/: Dockerfile  check_running_session.sh  entrypoint.sh  nginx.conf  nginx.conf.template  prepare_nginx.sh  trame_session_monitor.py  trame_session_monitor.sh
dockerfiles/nginx/: trame
dockerfiles/setup/: apps.yml  initialize.sh
launcher_app/: auth.py  default-launcher.json  galaxy.py  settings.py  urls.py  views.py
launcher_app/app/: config.py  main.py  mvvm_factory.py  tools.json
launcher_app/app/binding/: binding.py
launcher_app/app/models/: __init__.py  galaxy.py  job.py  tool.py  user.py
launcher_app/app/utilities/: auth.py  monitor.py  tools.py
launcher_app/app/view_models/: home.py  job.py  tool.py  user.py
launcher_app/app/views/: base.py  home.py  login.py  main.py  view_controller.py
launcher_app/app/views/routes/: __init__.py  category.py  home.py  login.py
launcher_app/app/views/styles/: core_style.css
launcher_app/app/views/theme/: README.md  __init__.py  components.py  core_style.scss  theme.py  vuetify_config.json
template_app/app/: app_launcher_panel.py  core.py  core_style.css  login_view.py  main.py  main_view.py  model.py  ui_config_panel.py  ui_execution_panel.py
template_app/app/utilities/: galaxy.py
vue/: index.html  package.json  pnpm-lock.yaml  vite.config.js
vue/src/: App.vue  main.js
vue/src/router/: index.js
vue/src/stores/: job.js  user.js
vue/src/views/: CategoryView.vue  HomeView.vue
