[tool.poetry]
name = "launcher-app"
version = "0.1.0"
description = ""
authors = ["Yakubov, Sergey <yakubovs@ornl.gov>", "Cage, Gregory <cagege@ornl.gov>"]
packages = [{include = "launcher_app"}]

[tool.poetry.dependencies]
python = "^3.10"
trame = "^3.5.1"
trame-vuetify = "^2.4.2"
numpy = "^1.26.3"
trame-plotly = "^3.0.2"
bioblend = "^1.2.0"
plotly = "^5.18.0"
plotly-resampler = "^0.9.2"
matplotlib = "^3.8.2"
pywebview = "^4.4.1"
trame-keycloak = "^0.1.1"
oauthlib = "^3.2.2"
requests-oauthlib = "^2.0.0"
aiohttp = "^3.9.3"
trame-router = "^2.2.0"
py-mvvm = {extras = ["trame"], version = "^0.2.0"}

[[tool.poetry.source]]
name = "py-mvvm"
url = "https://code.ornl.gov/api/v4/projects/15758/packages/pypi/simple"
priority = "primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "launcher_app.app:main"
