[tool.poetry]
name = "launcher-app"
version = "0.1.0"
description = ""
authors = ["Yakubov, Sergey <yakubovs@ornl.gov>", "Cage, Gregory <cagege@ornl.gov>"]
packages = [{include = "launcher_app"}]

[tool.poetry.dependencies]
python = "^3.10"
trame = "^3.5.1"
trame-vuetify = "^2.4.2"
trame-client = "3.2.5"
bioblend = "^1.2.0"
pywebview = "^4.4.1"
oauthlib = "^3.2.2"
requests-oauthlib = "^2.0.0"
aiohttp = "^3.9.3"
trame-router = "^2.2.0"
py-mvvm = {extras = ["trame"], version = "^0.2.0"}
trame-facade = "^0.2.1"
pyjwt = "^2.8.0"
python-dotenv = "^1.0.1"

[[tool.poetry.source]]
name = "py-mvvm"
url = "https://code.ornl.gov/api/v4/projects/15758/packages/pypi/simple"
priority = "primary"

[[tool.poetry.source]]
name = "trame-facade"
url = "https://code.ornl.gov/api/v4/projects/16294/packages/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "launcher_app.app:main"
