[tool.poetry]
name = "launcher-app"
version = "0.1.0"
description = ""
authors = ["Yakubov, Sergey <yakubovs@ornl.gov>", "Cage, Gregory <cagege@ornl.gov>"]
packages = [{include = "launcher_app"}]

[tool.poetry.dependencies]
python = "^3.10"
bioblend = "^1.3.0"
django = "<6"
django-extensions = "^3.2.3"
pyjwt = "^2.9.0"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
